# StarBooks-Server

./: .gitignore  README.md
Services/book_catalog_service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
Services/book_catalog_service/mongo-seed/: book-init.json
Services/book_catalog_service/proto/: catalog.proto
Services/book_catalog_service/src/: config.rs  main.rs
Services/book_catalog_service/src/application/query/: get_paged_books.rs  mod.rs
Services/book_catalog_service/src/domain/: author.rs  book_entity.rs  i_repository.rs  mod.rs  publisher.rs  rblan_string_vvo.rs
Services/book_catalog_service/src/domain/book/: author.rs  book_entity.rs  mod.rs  publisher.rs
Services/book_catalog_service/src/domain/core/: errors.rs  i_repository.rs  mod.rs  vvos.rs
Services/book_catalog_service/src/grpc/: mod.rs  star_books.catalog.rs
Services/book_catalog_service/src/infrastructure/: book_model.rs  book_repository.rs  mod.rs
Services/book_catalog_service/src/infrastructure/book/: book_model.rs  book_repository.rs  mod.rs
Services/book_catalog_service/src/infrastructure/core/: errors.rs
Services/book_catalog_service/src/server/: book_catalog_service.rs  mod.rs
StarBooks.Server/: StarBooks.Server.sln
StarBooks.Server/StarBooks.API/: Program.cs  StarBooks.API.csproj  WeatherForecast.cs  appsettings.Development.json  appsettings.json
StarBooks.Server/StarBooks.API/Controllers/: BooksController.cs  WeatherForecastController.cs
StarBooks.Server/StarBooks.API/Properties/: launchSettings.json
StarBooks.Server/StarBooks.Domain/: StarBooks.Domain.csproj
StarBooks.Server/StarBooks.Domain/Books/: AccessInfo.cs  AuthorModel.cs  BookModel.cs  CategoryModel.cs  EResource.cs  ImageLinks.cs  IndustryIdentifier.cs  Price.cs  (+4 more)
StarBooks.Server/StarBooks.Infrastructure/: StarBooks.Infrastructure.csproj
(+25 files in other folders)
