[package]
name = "book-catalog-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
domain_patterns = "0.2.141"
futures = "0.3.24"
isbnid = "0.1.3"
mongodb = "2.3.0"
prost = "0.11.0"
serde = "1.0.145"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.10"
tonic = "0.8.1"
typenum = "1.15.0"
uuid = "1.1.2"

[build-dependencies]
tonic-build = "0.8.0"
