[package]
name = "book-catalog-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
base64 = "0.13.0"
derive_more = { version = "0.99.17", features = ["display"] }
domain_patterns = "0.2.141"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.24"
isbnid = "0.1.3"
mediator = { version = "0.2.2", features = ["async", "async-trait"] }
mongodb = "2.3.0"
prost = "0.11.0"
rust-embed = { version = "6.4.1", features = ["debug-embed"] }
serde = "1.0.145"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.10"
tonic = "0.8.1"
typenum = "1.15.0"
uuid = "1.1.2"

[build-dependencies]
tonic-build = "0.8.0"
